# linwin

./: .gitignore  CLAUDE.md  README.md  _setup_tui.py  _setup_ubuntu.sh  _verify_setup.sh  config.json  install_dependencies.bat  linwin.bat  pyproject.toml  requirements.txt  run.bat  run_setup.bat  run_setup_tui.bat  setup_tui_linux.py  setup_windows_phase1.ps1  setup_windows_phase2.ps1  setup_wsl.bat  verify_setup.ps1  wsl_ubuntu_gnome.md
.github/workflows/: ci.yml
linwin/: __init__.py  __main__.py
linwin/linux/: __main__.py
linwin/linux/screens/: config_editor.py  setup.py  verify.py  welcome.py
linwin/linux/tasks/: apt.py  desktop.py  openclaw.py  snaps.py  steps.py  systemd.py  xrdp.py
linwin/shared/: base_app.py  config.py  headless_protocol.py  launcher.py  setup_logging.py  subprocess_runner.py  theme.py  verify_checks.py  widgets.py
linwin/windows/: __main__.py  app.py
linwin/windows/screens/: config_editor.py  launcher.py  password_prompt.py  setup.py  setup_proposal.py  status.py  verify.py
linwin/windows/tasks/: auto_config.py  autostart.py  drive_scan.py  features.py  full_verify.py  health_check.py  linux_invoke.py  setup_tasks.py  state.py  validators.py  wsl_config.py  wsl_install.py
scripts/: prompts.md  publish.bat  setup_dev.bat  setup_wsl.bat  ship.bat  test.bat
tests/: conftest.py  helpers.py  test_config.py  test_coverage_gaps.py  test_drive_scan.py  test_features.py  test_final_gaps.py  test_headless.py  test_launcher.py  test_linux_tasks.py  test_main_entry.py  test_openclaw_live.py  test_rdp_desktop.py  test_rdp_lifecycle.py  test_rdp_login.py  test_rdp_session.py  test_screens.py  test_setup_screen.py  test_shared_modules.py  test_state.py  test_subprocess_runner.py  test_validators.py  test_verify_checks.py  test_windows_tasks.py
tui/linux/: __main__.py  app.py
tui/linux/screens/: config_editor.py  setup.py  verify.py  welcome.py
tui/linux/tasks/: apt.py  snaps.py  systemd.py  wslg.py  xrdp.py
tui/shared/: config.py  launcher.py  setup_logging.py  subprocess_runner.py  task_result.py  theme.py  widgets.py
tui/windows/: __main__.py  app.py
tui/windows/screens/: config_editor.py  drive_picker.py  launcher.py  phase1.py  phase2.py  setup.py  status.py  verify.py  welcome.py
tui/windows/tasks/: features.py  linux_invoke.py  state.py  validators.py  wsl_config.py  wsl_install.py
