[project]
name = "linwin"
version = "0.1.0"
description = "TUI setup tool for WSL2 Ubuntu with WSLg GUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.79.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
setup-tui = "linwin.windows.__main__:main"

