[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linwin"
version = "0.2.0"
description = "TUI setup tool for WSL2 Ubuntu with WSLg GUI"
requires-python = ">=3.11"
authors = [
    {name = "James Abel"},
]
dependencies = [
    "textual>=0.79.0",
    "pref>=0.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyship>=0.3.3",
]

[project.scripts]
setup-tui = "linwin.windows.__main__:main"

[tool.pyship]
is_gui = false

